ncc/testsuite/negative/expected-type.n
class C {
  x : print_gutenberg;    // E: unbound type name `print_gutenberg'
}
